[package]
name = "watchy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jdhouseholder/watchy"
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
nix = { version = "0.29.0", features = ["inotify"] }
sha2 = "0.10.8"
